--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.4",
     "@primeng/themes": "^19.0.8",
+    "chart.js": "^4.4.8",
     "express": "^4.18.2",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
